welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: too many arguments for method droite: ()Unit
    droite(2)
          ^