welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  serpent()
}

def serpent(){
  if(!estFaceMur()){
    avance()
  } else{
    gauche()
    if(getDirection==Direction.OUEST){
      avance()
      gauche()
    }
    droite(2)
    if(getDirection==Direction.EST){
      avance()
      droite()
    }
  }
}